--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-primary fade show rounded-0 mt-0 mb-0" role="alert">
-    <button type="button" class="close mb-3" aria-label="Close" (click)="toggleSettings()"
+    <button type="button" class="close mb-3 rounded-0" aria-label="Close" (click)="toggleSettings()"
         mat-raised-button matTooltip="Close settings" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
         <span aria-hidden="true">&times;</span>
     </button>
@@ -8,13 +8,13 @@
         <form id="allSettings">
             <div class="form-group">
                 <label for="maxChannelvalue">Max channel value</label>
-                <input type="number" class="form-control" id="maxChannelvalue" aria-describedby="maxChannelValue" placeholder=0 value="{{maxChannelValue}}" max="10000" min="1">
+                <input type="number" class="form-control rounded-0" id="maxChannelvalue" aria-describedby="maxChannelValue" placeholder=0 value="{{maxChannelValue}}" max="10000" min="1">
             </div>
-            <button type="button" class="btn btn-primary" (click)="updateSettings()" 
+            <button type="button" class="btn btn-primary rounded-0" (click)="updateSettings()" 
                 mat-raised-button matTooltip="Update brush editor settings" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
                 Update settings
             </button>
-            <button type="button" class="btn btn-secondary ml-1" (click)="resetSettings()"
+            <button type="button" class="btn btn-secondary ml-1 rounded-0" (click)="resetSettings()"
                 mat-raised-button matTooltip="Reset all settings to default (channel names, max channel value, etc.)" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
                 Reset all
             </button>
@@ -22,8 +22,8 @@
         <div id="confirmation" hidden>
             <p>Your max channel value is set to: <span style="font-weight:bold">{{maxChannelValue}}</span>!</p>
             <p>Do you want all values in the table that are greater than <span style="font-weight:bold">{{maxChannelValue}}</span> to be changed to <span style="font-weight:bold">{{maxChannelValue}}</span>?</p>
-            <button id="yes" (click)="adjustBrushToMaxvalue()" class="btn btn-primary ml-1">Yes</button>
-            <button id="no" (click)="hideConfirmation()" class="btn btn-primary ml-1">No, let them stay like this</button>
+            <button id="yes" (click)="adjustBrushToMaxvalue()" class="btn btn-primary ml-1 rounded-0">Yes</button>
+            <button id="no" (click)="hideConfirmation()" class="btn btn-primary ml-1 rounded-0">No, let them stay like this</button>
         </div>
     </div>
 
