--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -7,6 +7,9 @@
 .navbar-buttons {
     margin: 0;
 }
+.nav-item {
+    width: 80%;
+}
 .chooseFileLabel {
     cursor: pointer;
     margin-bottom: 0;
