--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -7,22 +7,34 @@
         <form id="allSettings">
             <div class="form-group">
                 <label for="maxChannelvalue">Max channel value</label>
-                <input type="number" class="form-control" id="maxChannelvalue" aria-describedby="maxChannelValue" placeholder=0 value="{{maxChannelValue}}" max="10000" min="1">
+                <input type="number" class="form-control" id="maxChannelvalue" aria-describedby="maxChannelValue" placeholder="0" value="{{maxChannelValue}}">
+                <button class="btn btn-primary mt-1" (click)="updateMaxChannelValue(); hideSettingsDiv()">Update value</button>
             </div>
-            <button type="button" class="btn btn-primary" (click)="updateSettings()" 
-                mat-raised-button matTooltip="Update brush editor settings" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
-                Update settings
-            </button>
-            <button type="button" class="btn btn-secondary ml-1" (click)="resetSettings()"
-                mat-raised-button matTooltip="Reset all settings to default (channel names, max channel value, etc.)" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
-                Reset all
-            </button>
+
+            <div class="form-group">
+                <label for="robotIP">Robot IP adress (ex: 127.0.0.1)</label>
+                <input type="text" class="form-control" id="robotIP" aria-describedby="robotIP" placeholder="127.0.0.1" value="{{robotIP}}">
+                <button class="btn btn-primary mt-1" (click)="updateRobotIP()">Update IP</button>
+                <button class="btn btn-secondary ml-1 mt-1" (click)="setRobotIPtoLocal()">Use local IP</button>
+            </div>
+
+            <div class="form-group">
+                <label for="resetMaxBtn">Reset to default</label><br>
+                <button id="resetMaxBtn" class="btn btn-primary mt-1" (click)="resetMaxChannel()" mat-raised-button matTooltip="Reset max channel value to 1000" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
+                    Reset max channel value
+                </button>
+                <br>
+                <button class="btn btn-primary mt-1" (click)="resetChannelNames()" mat-raised-button matTooltip="Reset the channel names to default (Channel 1, Channel 2, etc.)" matTooltipShowDelay="1000" matTooltipClass="primary-tooltip">
+                    Reset channel names
+                </button>
+            </div>
         </form>
+
         <div id="confirmation" hidden>
             <p>Your max channel value is set to: <span style="font-weight:bold">{{maxChannelValue}}</span>!</p>
             <p>Do you want all values in the table that are greater than <span style="font-weight:bold">{{maxChannelValue}}</span> to be changed to <span style="font-weight:bold">{{maxChannelValue}}</span>?</p>
-            <button id="yes" (click)="adjustBrushToMaxvalue()" class="btn btn-primary ml-1">Yes</button>
-            <button id="no" (click)="hideConfirmation()" class="btn btn-primary ml-1">No, let them stay like this</button>
+            <button id="yes" (click)="adjustBrushToMaxvalue(); hideConfirmation()" class="btn btn-primary ml-1">Yes</button>
+            <button id="no" (click)="hideConfirmation(); toggleSettings()" class="btn btn-primary ml-1">No, let them stay like this</button>
         </div>
     </div>
 
